--- a/ms.Rmd
+++ b/ms.Rmd
@@ -1,7 +1,7 @@
 ---
-title: TITLE
-shorttitle: SHORT TITLE
-leftheader: SHORT TITLE
+title: 'To be determined: Associations between internet use and well-being in gallup world poll data'
+shorttitle: tbd
+leftheader: tbd
 author: 
   - name: Matti Vuorre
     affiliation: 1
@@ -9,25 +9,22 @@ author:
     address: Oxford Internet Institute, University of Oxford
     email: matti.vuorre@oii.ox.ac.uk
     role:
-      - role mcrole
-  - name: Author McAuthor
-    affiliation: 2
-    address: Address McAddress
-    email: email@mcemail.com
+      - Concept
+  - name: Andrew K. Przybylski
+    affiliation: 1
+    email: andy.przybylski@oii.ox.ac.uk
     role:
-      - role mcrole
+      - Concept
 
 affiliation:
   - id: 1
     institution: Oxford Internet Institute, University of Oxford
-  - id: 2
-    institution: Institution McInstitution
 
 authornote: |
   \noindent \textbf{This manuscript is not yet peer-reviewed.}
   
 abstract: |
-  Many things, few words.
+  We analyse GWP data to look at relation between internet use and well-being.
   
 keywords: words, key
 wordcount: "`r wordcountaddin:::word_count(filename = 'ms.Rmd')`"
@@ -50,15 +47,290 @@ output:
     number_sections: false
 ---
 
+<!-- First a section of lots of EDA -->
+
 ```{r setup, include = FALSE}
 library(papaja)
+library(scales)
+library(knitr)
+library(corrr)
+library(tidyverse)
+opts_chunk$set(
+  include = FALSE
+)
 
 # Parallel computation options
 MAX_CORES <- as.numeric(Sys.getenv("MAX_CORES"))
 if (is.na(MAX_CORES)) MAX_CORES <- parallel::detectCores(logical = FALSE)
 ```
 
-R [@rcoreteamLanguageEnvironmentStatistical2022]
+```{r}
+#| label: data-clean
+path <- "data-raw/gwp.rds"
+
+# List of indices
+ix <- list(
+  life_satisfaction = c("WP16"),
+  negative_experiences = c("WP68", "WP69", "WP70", "WP71", "WP74"), # negative experiences
+  positive_experiences = c("WP60", "WP61", "WP63", "WP65", "WP67"), # positive experiences
+  loneliness = c("WP27", "WP10248"), # social life index, or inverse "loneliness"
+  law = c("WP112", "WP113", "WP117", "WP118"), # law and order index
+  foodshelter = c("WP40", "WP43"), # food and shelter index
+  # community basics index
+  communitybasics = c("WP91", "WP92", "WP94", "WP95", "WP98", "WP93", "WP97"), 
+  # financiallife = c("WP2319", "WP30", "WP31", "WP88"),
+  civicengagement = c("WP108", "WP109", "WP110"),
+  communityattachment = c("WP83", "WP85", "WP86"),
+  diversityindex = c("WP103", "WP105", "WP106"),
+  # Gallup-Sharecare Global Well-Being Index
+  gwpi_purpose = c("WP14442", "WP14443"),
+  gwpi_social = c("WP14444", "WP14445"),
+  gwpi_financial = c("WP14446", "WP14447"),
+  gwpi_community = c("WP14450", "WP14451"),
+  gwpi_physical = c("WP14448", "WP14449")
+)
+
+if (dir.exists("data-raw/gallup") & !file.exists(path)) {
+  library(haven)
+  library(labelled)
+  # Load relevant variables
+  dat <- read_spss(
+    "data-raw/gallup/The_Gallup_042722.sav", 
+    col_select = c(
+      WP5, # country
+      YEAR_CALENDAR,
+      WP1220, # age
+      WP1219, # sex
+      WP14, # urbanicity
+      INCOME_2, # Annual Household Income in International Dollars
+      WP16056, # internet access
+      WP39, # internet access at home
+      WP19544, # internet on your phone
+      WP15862, # internet used past 7 days
+      # outcomes, indices, etc
+      all_of(
+        unlist(ix)
+      )
+    )
+  )
+  
+  # Rename and recode demographics and predictors
+  dat <- dat %>% 
+    mutate(
+      country = as_factor(WP5),
+      year = as.integer(YEAR_CALENDAR),
+      age = na_if(as.numeric(WP1220), 100),
+      sex = factor(as_factor(WP1219), levels = c("Female", "Male")),
+      urban = factor(
+        as_factor(WP14),
+        levels = c(
+          "A rural area or on a farm", "A small town or village", 
+          "A suburb of a large city", "A large city"  
+        ),
+        labels = c("Rural", "Town", "Suburb", "City")
+      ), 
+      income = as.numeric(INCOME_2),
+      internet_access = factor(as_factor(WP16056), levels = c("No", "Yes")),
+      internet_past7days = factor(as_factor(WP15862), levels = c("No", "Yes")),
+      internet_home = factor(as_factor(WP39), levels = c("No", "Yes")),
+      internet_phone = factor(as_factor(WP19544), levels = c("No", "Yes")),
+      .keep = "unused",
+      .before = 1
+    )
+  
+  # Recode items
+  # make (DK) and (Refused) NAs
+  # make values run from 0 (negative construct) to max (positive construct)
+
+  # primary index variables
+  dat %>% 
+    select(all_of(unlist(ix[1:4], use.names = FALSE))) %>% 
+    generate_dictionary()
+  dat <- dat %>% 
+    mutate(
+      # Life satisfaction is already in correct order, 98 & 99 are DK and refused
+      WP16 = if_else(WP16 %in% 98:99, as.integer(NaN), as.integer(WP16)),
+      # Negative experiences, positive experiences, and "loneliness"
+      # 3:DK, 4:refused, 1:yes, 2:no
+      across(
+        all_of(as.character(unlist(ix[2:4]))), 
+        ~if_else(. %in% 3:4, as.integer(NaN), as.integer(2 - .))
+      )
+      
+    )
+  
+  # Then the other scales
+  dat %>% 
+    select(all_of(unlist(ix[-c(1:4)], use.names = FALSE))) %>% 
+    generate_dictionary()
+  dat <- dat %>% 
+    mutate(
+      # Law and order, Food and shelter, Community basics, Civic engagement, Community attachment, Diversity index
+      # 1: positive (various) 2: negative (various), 3:DK, 4:refuse
+      across(
+        all_of(as.character(unlist(ix[5:10]))), 
+        ~if_else(. %in% 3:4, as.integer(NaN), as.integer(2 - .))
+      ),
+      # GWPI items
+      # 1: disagree 5:agree, 8:DK 9:refused
+      across(
+        all_of(as.character(unlist(ix[11:15]))), 
+        ~if_else(. %in% 8:9, as.integer(NaN), as.integer(. - 1))
+      ),
+    )
+  
+  # Aggregate scales
+  for (i in 1:length(ix)) {
+    dat[[names(ix[i])]] <- rowMeans(
+      select(
+        dat, 
+        all_of(as.character(unlist(ix[i])))
+      ), 
+      na.rm = TRUE
+    ) 
+  }
+  
+  # Remove other scale items
+  dat <- dat %>% 
+    select(-all_of(as.character(unlist(ix[5:15]))))
+  
+  # Save
+  write_rds(dat, path)
+}
+dat <- read_rds(path)
+```
+
+```{r}
+#| label: chord-diagram
+#| eval: false
+# Correlation
+library(circlize)
+
+x <- dat %>% 
+  select(-c(1:6, all_of(as.character(unlist(ix[1:4]))))) %>% 
+  mutate(across(starts_with("internet"), as.numeric)) %>% 
+  # correlate()
+
+x2 <- x %>% 
+  stretch() %>% 
+  drop_na(r) %>% 
+  mutate(
+    across(x:y, ~str_replace(., "internet", "www"))
+  ) 
+
+x2 %>% 
+  chordDiagramFromDataFrame(
+    col = colorRamp2(
+      c(-1, 1), 
+      c("firebrick1", "dodgerblue1")
+      ),
+    transparency = 0.25
+  )
+```
+
+
+```{r}
+x <- dat %>% 
+  filter(year == 2021) %>% 
+  select(
+    -c(
+      1:5, internet_access, internet_home, starts_with("gwpi"),
+      all_of(as.character(unlist(ix[1:4])))
+    )
+  ) %>% 
+  mutate(across(where(is.factor), ~as.numeric(.)-1)) %>% 
+  correlate(method = "spearman")
+
+x %>% 
+  rename_with(~str_replace(., "internet", "net") %>% str_trunc(12, ellipsis = "")) %>% 
+  # rearrange() %>%
+  shave() %>% 
+  fashion() %>% 
+  as_tibble() %>% 
+  select(1:13) %>% 
+  kable(caption = "Correlations in 2021")
+```
+
+```{r}
+#| label: eda-missingness
+#| eval: false
+# Explore missingness in data
+library(naniar)
+dat %>% 
+  group_by(year) %>% 
+  summarise(
+    `Total rows` = n(),
+    across(c(income, urban, starts_with("internet")), ~sum(!is.na(.)))
+  ) %>% 
+  mutate(
+    across(income:internet_phone, ~./`Total rows`),
+    `Total rows` = number(`Total rows`, big.mark = ",")
+  ) %>% 
+  kable(
+    digits = 2, 
+    caption = "Existing covariates over time in GWP data"
+  )
+
+dat %>% 
+  group_by(year, country) %>% 
+  summarise(
+    across(
+      starts_with("internet"),
+      .fns = list(total = ~n(), missing = ~sum(is.na(.))), 
+      .names = "{.col}.{.fn}"
+    )
+  ) %>% 
+  ungroup() %>% 
+  pivot_longer(-c(year, country)) %>% 
+  separate(name, c("x", "y"), sep = "\\.") %>% 
+  pivot_wider(values_from = value, names_from = y) %>% 
+  filter(country %in% sample(unique(dat$country), 25)) %>%
+  ggplot(aes(year, missing/total, col = x)) +
+  geom_line() +
+  facet_wrap("country") +
+  theme(legend.position = "bottom")
+
+# Cross-missingness
+dat %>% 
+  filter(year == 2019) %>% 
+  select(income, urban, starts_with("internet")) %>% 
+  naniar::as_shadow() %>% 
+  rename_with(~str_remove(., "internet_") %>% str_remove("_NA")) %>% 
+  mutate(across(everything(), as.numeric)) %>% 
+  cor(method = "spearman") %>% 
+  kable(digits = 2)
+```
+
+# Methods
+
+Gallup world poll is a dataset that has data.
+
+## Internet engagement
+
+- "Communications Access Index"
+  - [WP39]: Does your home have access to the internet? 
+  - [WP16056]: Do you have access to the internet in any way, whether on a mobile phone, a computer, or some other device?
+    1 Yes
+    2 No
+    3 (DK)
+    4 (Refused)
+- "Communications Use Index"
+  - [WP15862]: Have you used the internet in the past seven days, whether on a mobile phone, a computer, or some other device?
+    1 Yes
+    2 No
+    3 (DK)
+    4 (Refused)
+- In "Appendix A: 2021 Core Questions and Codes"
+  - [WP19544]: Can your mobile phone be used to access the Internet?
+    1 Yes
+    2 No
+    3 (DK)
+    4 (Refused)
+
+
+## Data analysis
+
+We used R [@rcoreteamLanguageEnvironmentStatistical2022] for analyses.
 
 \clearpage
 
@@ -70,18 +342,18 @@ R [@rcoreteamLanguageEnvironmentStatistical2022]
 
 <!-- Create an appendix with new page, table, and figure numbers. -->
 
-\clearpage
-\onecolumn
+<!-- \clearpage -->
+<!-- \onecolumn -->
 
-# Supplementary online material to Title (Authors)
+<!-- # Supplementary online material to Title (Authors) -->
 
 <!-- Prepend table & figure numbers with S and reset counters -->
-\setcounter{page}{1}
-\setcounter{table}{0}
-\setcounter{figure}{0}
-\renewcommand{\thetable}{S\arabic{table}}
-\renewcommand{\thefigure}{S\arabic{figure}}
+<!-- \setcounter{page}{1} -->
+<!-- \setcounter{table}{0} -->
+<!-- \setcounter{figure}{0} -->
+<!-- \renewcommand{\thetable}{S\arabic{table}} -->
+<!-- \renewcommand{\thefigure}{S\arabic{figure}} -->
 
-```{r include-only-for-pdf}
-#| include: !expr knitr::is_latex_output()
-```
+<!-- ```{r include-only-for-pdf} -->
+<!-- #| include: !expr knitr::is_latex_output() -->
+<!-- ``` -->
