--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,4 @@
-@software{rcoreteamLanguageEnvironmentStatistical2022,
+@Software{rcoreteamLanguageEnvironmentStatistical2022,
   title = {R: {{A Language}} and {{Environment}} for {{Statistical Computing}}. {{Version}} 4.2.2},
   author = {{R Core Team}},
   date = {2022},
@@ -6,6 +6,38 @@
   url = {https://www.R-project.org/},
   organization = {{R Foundation for Statistical Computing}},
   version = {4.2.2},
-  keywords = {\#nosource}
+  keywords = {\#nosource},
 }
 
+@Online{gallupWorldPollMethodology2022,
+  title = {World {{Poll Methodology}}},
+  author = {{Gallup}},
+  date = {2022-03-19},
+  url = {https://web.archive.org/web/20220319171203/https://news.gallup.com/poll/165404/world-poll-methodology.aspx},
+  urldate = {2022-11-24},
+}
+
+@Article{ryffStructurePsychologicalWellbeing1995,
+  title = {The Structure of Psychological Well-Being Revisited.},
+  author = {Carol D. Ryff and Corey Lee M. Keyes},
+  date = {1995},
+  journaltitle = {Journal of Personality and Social Psychology},
+  shortjournal = {Journal of Personality and Social Psychology},
+  volume = {69},
+  number = {4},
+  pages = {719--727},
+  issn = {1939-1315, 0022-3514},
+  doi = {10.1037/0022-3514.69.4.719},
+  url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/0022-3514.69.4.719},
+  urldate = {2022-11-24},
+  langid = {english},
+}
+
+@Online{burnsThoughtExperimentWhat2022,
+  title = {A Thought Experiment: What If We Talked about the over-60s’ Screen Time the Way We Talk about Young People’s Screen Time?},
+  shorttitle = {A Thought Experiment},
+  author = {Heather Burns},
+  date = {2022-11-24},
+  url = {https://web.archive.org/web/20221124191630/https://webdevlaw.uk/2022/08/18/a-thought-experiment-what-if-we-talked-about-the-over-60s-screen-time-the-way-we-talk-about-young-peoples-screen-time/},
+  urldate = {2022-11-24},
+}
