--- a/references.bib
+++ b/references.bib
@@ -17,27 +17,33 @@
   urldate = {2022-11-24},
 }
 
-@Article{ryffStructurePsychologicalWellbeing1995,
-  title = {The Structure of Psychological Well-Being Revisited.},
-  author = {Carol D. Ryff and Corey Lee M. Keyes},
-  date = {1995},
-  journaltitle = {Journal of Personality and Social Psychology},
-  shortjournal = {Journal of Personality and Social Psychology},
-  volume = {69},
-  number = {4},
-  pages = {719--727},
-  issn = {1939-1315, 0022-3514},
-  doi = {10.1037/0022-3514.69.4.719},
-  url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/0022-3514.69.4.719},
-  urldate = {2022-11-24},
+@Article{vuorreThereNoEvidence2021,
+  title = {There {{Is No Evidence That Associations Between Adolescents}}’ {{Digital Technology Engagement}} and {{Mental Health Problems Have Increased}}},
+  author = {Matti Vuorre and Amy Orben and Andrew K. Przybylski},
+  date = {2021-05-03},
+  journaltitle = {Clinical Psychological Science},
+  shortjournal = {Clinical Psychological Science},
+  pages = {2167702621994549},
+  publisher = {{SAGE Publications Inc}},
+  issn = {2167-7026},
+  doi = {10.1177/2167702621994549},
+  url = {https://doi.org/10.1177/2167702621994549},
+  urldate = {2021-05-04},
+  abstract = {Digital technology is ubiquitous in modern adolescence, and researchers are concerned that it has negative impacts on mental health that, furthermore, increase over time. To investigate whether technology is becoming more harmful, we examined changes in associations between technology engagement and mental health in three nationally representative samples. Results were mixed across types of technology and mental health outcomes: Technology engagement had become less strongly associated with depression in the past decade, but social-media use had become more strongly associated with emotional problems. We detected no changes in five other associations or differential associations by sex. There is therefore little evidence for increases in the associations between adolescents’ technology engagement and mental health. Information about new digital media has been collected for a relatively short time; drawing firm conclusions about changes in their associations with mental health may be premature. We urge transparent and credible collaborations between scientists and technology companies.},
   langid = {english},
+  keywords = {adolescents,depression,mental health,open materials,social media},
 }
 
-@Online{burnsThoughtExperimentWhat2022,
-  title = {A Thought Experiment: What If We Talked about the over-60s’ Screen Time the Way We Talk about Young People’s Screen Time?},
-  shorttitle = {A Thought Experiment},
-  author = {Heather Burns},
-  date = {2022-11-24},
-  url = {https://web.archive.org/web/20221124191630/https://webdevlaw.uk/2022/08/18/a-thought-experiment-what-if-we-talked-about-the-over-60s-screen-time-the-way-we-talk-about-young-peoples-screen-time/},
-  urldate = {2022-11-24},
+@Misc{rohrerTheseAreNot2021,
+  title = {These Are Not the Effects You Are Looking for: {{Causality}} and the within-/between-Person Distinction in Longitudinal Data Analysis},
+  shorttitle = {These Are Not the Effects You Are Looking For},
+  author = {Julia M. Rohrer and Kou Murayama},
+  date = {2021-10-11T10:42:12},
+  publisher = {{PsyArXiv}},
+  doi = {10.31234/osf.io/tg4vj},
+  url = {https://psyarxiv.com/tg4vj/},
+  urldate = {2022-12-09},
+  abstract = {In psychological science, researchers often pay particular attention to the distinction between within- and between-person relationships in longitudinal data analysis. Here, we aim to clarify the relationship between the within- and between-person distinction and causal inference, and show that the distinction is informative but does not play a decisive role for causal inference. Our main points are threefold. First, within-person data are not necessary for causal inference; for example, between-person experiments can inform us about (average) causal effects. Second, within-person data are not sufficient for causal inference; for example, time-varying confounders can lead to spurious within-person associations. Finally, despite not being sufficient, within-person data can be tremendously helpful for causal inference. We provide pointers to help readers navigate the more technical literature on longitudinal models, and conclude with a call for more conceptual clarity: Instead of letting statistical models dictate which substantive questions we ask, we should start with well-defined theoretical estimands which in turn determine both study design and data analysis.},
+  langid = {american},
+  keywords = {causal inference,longitudinal data,Quantitative Methods,Social and Behavioral Sciences,within-person},
 }
