--- a/references.bib
+++ b/references.bib
@@ -47,3 +47,16 @@
   langid = {american},
   keywords = {causal inference,longitudinal data,Quantitative Methods,Social and Behavioral Sciences,within-person},
 }
+
+@article{batesFittingLinearMixedEffects2015,
+  title = {Fitting {{Linear Mixed-Effects Models Using}} Lme4},
+  author = {Bates, Douglas M. and M{\"a}chler, Martin and Bolker, Ben M. and Walker, Steve},
+  year = {2015},
+  journal = {Journal of Statistical Software},
+  volume = {67},
+  number = {1},
+  pages = {1--48},
+  doi = {10.18637/jss.v067.i01},
+  keywords = {\#nosource,Statistics},
+  annotation = {00014}
+}
