--- a/ms.Rmd
+++ b/ms.Rmd
@@ -60,6 +60,7 @@ library(patchwork)
 library(ggdist)
 library(corrr)
 library(tidyverse)
+library(ragg)
 opts_chunk$set(
   include = FALSE,
   cache = TRUE,
